Bug 102065 - Notebookbar: Menu bar disappears when cancelling dialog
Summary: Notebookbar: Menu bar disappears when cancelling dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks: Notebookbar
  Show dependency treegraph
 
Reported: 2016-09-11 22:34 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-02-07 10:25 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2016-09-11 22:34:29 UTC
Steps:
1) Open Calc
2) Enable notebookbar
3) Enable menubar from LO icon tab menu
4) Format > Print Ranges > Edit
5) Click cancel button
6) Menubar disappears

Version: 5.3.0.0.alpha0+
Build ID: f7513f0f53f2d074c08610a68fb787bb379c31d4
CPU Threads: 2; OS Version: Linux 3.19; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-09-02_23:58:05
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 Aron Budea 2016-09-12 00:24:23 UTC
Confirmed in Windows 7 with below master build.

Version: 5.3.0.0.alpha0+
Build ID: f7513f0f53f2d074c08610a68fb787bb379c31d4
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
Locale: hu-HU (hu_HU); Calc: CL
Comment 2 Commit Notification 2016-09-13 06:59:38 UTC
Szymon Kłos committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7aa6e5ce82eaca64f666b9fc6c0351bfd55d376a

tdf#102065 Notebookbar: Menu bar disappears when cancelling dialog

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Yousuf Philips (jay) (retired) 2016-10-05 19:09:16 UTC
Verified

Version: 5.3.0.0.alpha0+
Build ID: f309531cfe1d6a1b6ea1306d45ed3e121145bc5f
CPU Threads: 2; OS Version: Linux 3.19; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-10-04_03:52:18
Locale: en-US (en_US.UTF-8); Calc: group
Comment 4 MartinPC 2017-02-06 16:02:10 UTC
I'm not sure whether this is the right place to report this, but when I installed 5.3.0.3 Fresh x64 on Windows 7 and enabled the NotebookBar in Writer to check it out, the main Menu bar disappeared right away. The only UI element displayed was the NotebookBar, and in it I could not see a way to revert to the default toolbar layout. As mentioned in Bug 104550, disabling experimental features does not roll the toolbar layout back to the previous or default layout. I found a likely line for a manual reset in registrymodifications.xcu but was unable to find documentation for the setting in a reasonable amount of time. In the end, I simply replaced the entire registrymodifications.xcu file with a recent backup and that solved the problem.
Comment 5 Maxim Monastirsky 2017-02-07 10:25:10 UTC
Hi MartinPC,

(In reply to MartinPC from comment #4)
> I'm not sure whether this is the right place to report this,
Unfortunately not, and in general reopening bugs isn't appreciated. If you have a problem and can't find an open bug, always open a new one.

> but when I
> installed 5.3.0.3 Fresh x64 on Windows 7 and enabled the NotebookBar in
> Writer to check it out, the main Menu bar disappeared right away. The only
> UI element displayed was the NotebookBar, and in it I could not see a way to
> revert to the default toolbar layout.
There is an application icon at the top left corner of the NotebookBar. Clicking it will show a menu with a "Menubar" command.

Reverting the status to RESOLVED FIXED.