tdf#102065 Notebookbar: Menu bar disappears when cancelling dialog

Change-Id: I6f83248eddfc279fe69f0f9c1d64d6b453bb1d3e
Reviewed-on: https://gerrit.libreoffice.org/28843
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Szymon Kłos <eszkadev@gmail.com>